--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,16 +24,16 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="hid_only">This Game can only support Hid mode,make sure your controll is in HID mode !</string>
-    <string name="root_notice">Can not exec su, You need to root your device before use this apk	<string name="root_notice">Viaplay GameCenter can not get root access. Touch mapping functionality will not be available until the device is rooted	</string>
+    <string name="root_notice">Can not exec su, You need to root your device before use this apk	</string>
 	<string name="floatViewS">Floating window option</string>
 	<string name="toogle_to_open">Check to show a floating window</string>
 	<string name="reboot_notice">The device needs to reboot, or can not properly use the mapping function of Viaplay GameCenter</string>
 	<string name="i_get">I get it</string>
 	<string name="search_device">Seaching devices &#8230;</string>
 	<string name="search_end">Select a device to connect</string>
-	<string name="bt_notice">Bluetooth service is not active, click sure to start bluetooth service></string>
+	<string name="bt_notice">Bluetooth service is not active, click sure to start bluetooth service</string>
 	<string name="changeime">Keyboard  &amp; Input Method</string>
-	<string name="Introduction">\n\t Introduction:\n\n</string>
+	<string name="Introduction">\n\t Introduction:\n\n
 	    \t 1.Viaplay GameCenter requires a rooted device. Please note that rooting \n
 	    \t your device may void your warranty. Root at your own risk\n
 	   \t  2.Make sure Viaplay GameCenter is the current InputMethod.\n
